# clawops-call-me

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/: architecture.md
docs/plans/: 2026-03-05-daemon-architecture-design.md  2026-03-05-daemon-architecture-impl.md
docs/superpowers/specs/: 2026-03-11-recording-design.md
server/: package.json
server/src/: claude-session.ts  daemon-api.ts  daemon-client.ts  daemon-lifecycle.ts  daemon.ts  flock.ts  index.ts  phone-call.ts
server/src/providers/: index.ts  phone-clawops.ts  stt-openai-realtime.ts  types.ts
skills/phone-input/: SKILL.md
src/callme/: call_manager.py  config.py  daemon.py  daemon_api.py  daemon_lifecycle.py  session.py  stt_openai.py  tts_openai.py
