[project]
name = "callme-mcp"
version = "3.1.0"
description = "Claude Code plugin: phone calls via ClawOps SDK (no ngrok)"
requires-python = ">=3.11"
dependencies = [
    "clawops[agent]",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/callme"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]
